Fix welcome message alignment

--- a/sapling/themes/sapling/assets/css/site.css
+++ b/sapling/themes/sapling/assets/css/site.css
@@ -272,12 +272,7 @@ textarea, input, select {
 }
 @media screen and (max-width: 500px){
     #login_info {
-        display: block;
-        float: none;
-        text-align: right;
-        width: 100%;
         margin: 0;
-        padding: 0;
     }
     #login_info > div {
         margin: 0.5em;
